--- a/source/config.yaml
+++ b/source/config.yaml
@@ -1,4 +1,5 @@
-baseurl: /
+publishDir: '../docs'
+baseurl: https://sfcheung.github.io/testblogdown 
 languageCode: en-us
 title: A Hugo website
 theme: hugo-lithium
